--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="movie-list" id="movieList">
             <div id="movieList"></div>
         
-            <iframe id="movieIframe"></iframe>
+            <iframe id="movieIframe"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     
 
         </section>
