--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Ub Movies </h1>
+        <p style="color: brown;">If Show Any Error Like: Video embed restricted for this domain Refrest The Url</p>
         <input type="text" id="searchBar" placeholder="Search for movies...">
 
     </header>
