--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Ub Movies </h1>
-        <p style="color: brown;">If Show Any Error Like: Video embed restricted for this domain Refrest The Url</p>
+      <!--  <p style="color: brown;">If Show Any Error Like: Video embed restricted for this domain Refrest The Url</p>-->
         <input type="text" id="searchBar" placeholder="Search for movies...">
 
     </header>
@@ -23,7 +23,9 @@
         </section>
 
     </main>
-  
+   <footer>
+      <p>&copy; 2023 UB Movies. All rights reserved.</p>
+    </footer>
     <script src="m.js"></script>
 </body>
 </html>
