--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <main>
         <section class="movie-list" id="movieList">
             <div id="movieList"></div>
-        
+        <div class="boxmetadata">
+                <div class="metalft">
+                    <span class="views">Views: 0</span>
+                </div>
+            </div>
             <iframe id="movieIframe"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     
 
