--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="footer-content">
             <div class="footer-section about">
                 <h3>UB Movies</h3>
-                <p>Your go-to platform for the latest and greatest in cinema.</p>
+                <p>USE Ad-Blocker Before Playing The Movie</p>
             </div>
             <div class="footer-section links">
                 <h4>Quick Links</h4>
